# feiqiu_frontend

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
feiqiu/src-tauri/: Cargo.toml  tauri.conf.json
feiqiu/src-tauri/capabilities/: default.json
feiqiu/src-tauri/examples/: README.md  feiq_discovery.rs
feiqiu/src-tauri/icons/: icon.icns
feiqiu/src-tauri/src/: bootstrap.rs  error.rs  lib.rs  main.rs
feiqiu/src-tauri/src/commands/: config.rs  contacts.rs  conversation.rs  events.rs  file_transfer.rs  message.rs  mod.rs  peer.rs  system.rs
feiqiu/src-tauri/src/config/: app.rs  mod.rs
feiqiu/src-tauri/src/migration/: m20260105_000001_create_tables.rs  m20260110_000001_add_composite_indexes.rs  m20260114_000001_add_peer_ip_to_contacts.rs  m20260114_000001_create_contacts_tables.rs  m20260116_000001_remove_invalid_contacts_foreign_key.rs  m20260118_000001_add_user_id_to_peers.rs  m20260119_000001_create_conversations_tables.rs  mod.rs
feiqiu/src-tauri/src/modules/: mod.rs
feiqiu/src-tauri/src/modules/crypto/: mod.rs
feiqiu/src-tauri/src/modules/file_transfer/: manager.rs  mod.rs  response.rs  types.rs
feiqiu/src-tauri/src/modules/group/: mod.rs
feiqiu/src-tauri/src/modules/message/: handler.rs  mod.rs  types.rs
feiqiu/src-tauri/src/network/: mod.rs  protocol.rs  tcp.rs  udp.rs
feiqiu/src-tauri/src/state/: app_state.rs  events.rs  mod.rs
feiqiu/src-tauri/src/storage/: contact_repo.rs  conversation_repo.rs  database.rs  message_repo.rs  mod.rs  peer_repo.rs
feiqiu/src-tauri/src/utils/: hash.rs  logger.rs  mod.rs
feiqiu/src-tauri/tests/: commands_tests.rs  config_tests.rs  conversation_repo_tests.rs  manager_tests.rs  modules_tests.rs  network_tests.rs  peer_repo_tests.rs  protocol_tests.rs  state_tests.rs  storage_tests.rs  utils_error_tests.rs
(+149 files in other folders)
